--- a/documentation/docs/libraries/nodejs/how_to/_run_how_tos.mdx
+++ b/documentation/docs/libraries/nodejs/how_to/_run_how_tos.mdx
@@ -3,41 +3,45 @@
 Before you can run the examples, please refer to the [Node.js Getting Started guide](./../getting_started/nodejs) to install
 the library.
 
-## Build the Examples
-
-### Set Up Your `.env` File
+## Set Up Your `.env` File
 
 The examples use variables from a `.env` file.  Though you can create your own, for the examples you can simply copy the
-existing [`.env.example`](https://github.com/iotaledger/iota.rs/blob/develop/bindings/nodejs/.env.example) file. You can
+existing [`.env.example`](https://github.com/iotaledger/wallet.rs/blob/develop/bindings/nodejs/.env.example) file. You can
 do this running the following command from the `bindings/nodejs` directory:
 
 ```bash
 cp .env.example .env
 ```
 
-### Build All the Examples
+## Install Dependencies
 
-Since the [examples](https://github.com/iotaledger/iota.rs/tree/develop/bindings/nodejs/examples) are written in
-TypeScript, they first need to be compiled to JavaScript, before you can run them. To do this run the following command
-in the [examples folder](https://github.com/iotaledger/iota.rs/tree/develop/bindings/nodejs/examples) :
+Before you can try out the examples, you must install the necessary dependencies using npm.  You can do this by running
+the following command from the `binding/nodejs` directory:
+
+```bash
+npm i
+```
+
+## Build the Library
+
+Once you have [set up your `.env` file](#setup-your-env-file) and [installed the necessary dependencies](#install-dependencies)
+, you can build the library by running the following command:
 
 ```bash
 npm run build
 ```
 
-After you have run this command, you should have a newly create `dist` folder within the `examples` folder with all the
-compiled examples.
-
-### Build a Single Example
-
-You can also use `tsc exampleName.js` from the `examples` folder to compile a specific example.
-
 ## Run the Examples
 
-To run any Node.js example, you need to select any of the
-[Node.js examples](https://github.com/iotaledger/iota.rs/tree/dev/bindings/nodejs/examples) and run it with your local
-Node.js interpreter. The following snippet runs `00_mnemonic.js` from the project root:
+
+The wallet.rs library has numerous examples you can run to get acquainted with the library.
+After you have followed the instructions to install the library, you can run any Node.js example. You will need to select
+any of the [Node.js examples](https://github.com/iotaledger/wallet.rs/tree/dev/bindings/nodejs/examples) and run it with
+your local Node.js interpreter.
+
+The following snippet runs `00_mnemonic.js` from the project root:
 
 ```bash
-node bindings/nodejs/examples/dist/01_mnemonic.js
+node bindings/nodejs/examples/1-create-account.js
+
 ```
