--- a/documentation/docs/libraries/nodejs/how_to/_run_how_tos.mdx
+++ b/documentation/docs/libraries/nodejs/how_to/_run_how_tos.mdx
@@ -33,15 +33,15 @@ npm run build
 
 ## Run the Examples
 
-
 The wallet.rs library has numerous examples you can run to get acquainted with the library.
-After you have followed the instructions to install the library, you can run any Node.js example. You will need to select
-any of the [Node.js examples](https://github.com/iotaledger/wallet.rs/tree/dev/bindings/nodejs/examples) and run it with
+After you have followed the instructions to [build the library](#build-the-library), you can run any Node.js example.
+You will need to select any of the
+[Node.js examples](https://github.com/iotaledger/wallet.rs/tree/dev/bindings/nodejs/examples) and run it with
 your local Node.js interpreter.
 
-The following snippet runs `00_mnemonic.js` from the project root:
+To run examples, you will need to change to the `bindings/nodejs/examples` directory, and run any example.
+The following command will run the `10-node-info.js ` example:
 
 ```bash
-node bindings/nodejs/examples/1-create-account.js
-
+node 10-node-info.js
 ```
