--- a/documentation/docs/libraries/nodejs/how_to/_24_send_native_token/_code_sample.mdx
+++ b/documentation/docs/libraries/nodejs/how_to/_24_send_native_token/_code_sample.mdx
@@ -1,6 +1,8 @@
-
 import CodeBlock from '@theme/CodeBlock';
-import CodeSample from  '!!raw-loader!./../../../../../../bindings/nodejs/examples/2-generate-address.js';
+import CodeSample from  '!!raw-loader!./../../../../../../bindings/nodejs/examples/24-send-native-tokens.js'
+
+Update the token ID
+
 
 <CodeBlock className="language-typescript">
   {CodeSample}
@@ -9,5 +11,5 @@ import CodeSample from  '!!raw-loader!./../../../../../../bindings/nodejs/exampl
 You can run the example by running the following command from the `bindings/node/examples/` folder:
 
 <CodeBlock className="language-bash">
-    node 2-generate-address.js
+    node 24-send-native-tokens.js
 </CodeBlock>
