--- a/documentation/docs/libraries/rust/how_to/outputs_and_transactions/_05_send_transaction/_code_sample.mdx
+++ b/documentation/docs/libraries/rust/how_to/outputs_and_transactions/_05_send_transaction/_code_sample.mdx
@@ -1,10 +1,10 @@
 import CodeBlock from '@theme/CodeBlock';
 import CodeSample from '!!raw-loader!../../../../../../../examples/05_transaction.rs';
-import DotEnvWarning from "../../../../../_admonitions/_dot_env_warning.md"
+import DotEnvWarning from "../../../../../_admonitions/_warning_dot_env.md"
 
 <DotEnvWarning />
 
-<CodeBlock className="language-rust">
+<CodeBlock className="language-rust" highlight>
   {CodeSample}
 </CodeBlock>
 
