--- a/documentation/docs/how_tos/NFT/03_burn_nft.mdx
+++ b/documentation/docs/how_tos/NFT/03_burn_nft.mdx
@@ -1,10 +1,13 @@
 ---
 title: Burn NFTs
-description: ''
+sidebar_label: Burn
+description: 'How to burn an NFT using wallet.rs'
 image: /img/logo/iota_mark_light.png
 keywords:
 - how to
-- java
+- NFT
+- burn
+- burn NFT
 - nodejs
 - python
 - rust
@@ -17,9 +20,21 @@ import PythonCode from "../../_admonitions/_guide_coming_soon.md";
 import PythonOutput from "../../_admonitions/_guide_coming_soon.md";
 import RustCode from "../../libraries/rust/how_to/NFT/_03_burn_nft/_code_sample.mdx";
 import RustOutput from "../../libraries/rust/how_to/NFT/_03_burn_nft/_expected_output.md";
+import ReplaceNFTId from '../../_admonitions/_note_replace_native_token_id.md';
 
+You may want to burn some of your circulating NFTs. To do so, you will need to call the
+`Account.burn_nft(native_token, options)` function.
 
 ## Code Example
+
+<ReplaceNFTId/>
+
+The following example will:
+
+1. Create an account manager.
+2. Get Alice's account which was [created in the first guide](../accounts_and_addresses/01_create_a_wallet_account.mdx).
+3. [Get the account's balance](../accounts_and_addresses/04_check_balance.mdx).
+4. Burn an NFT of the supplied ID.
 
 <Tabs groupId="language">
     <TabItem value="rust" label="Rust">
