--- a/documentation/docs/how_tos/accounts_and_addresses/02_generate_address.mdx
+++ b/documentation/docs/how_tos/accounts_and_addresses/02_generate_address.mdx
@@ -1,14 +1,14 @@
 ---
 title: Generate an Address
-description: ''
+description: 'How to generate an address for a wallet account.'
 image: /img/logo/iota_mark_light.png
 keywords:
 - how to
-- client class
-- iota node
-- ClientBuilder
-- load balancer
-- java
+- generate address
+- generate wallet address
+- account manager
+- multi account approach
+- single account approach
 - nodejs
 - python
 - rust
@@ -21,8 +21,19 @@ import PythonCode from "../../libraries/python/how_to/accounts_and_addresses/_02
 import PythonOutput from "../../libraries/python/how_to/accounts_and_addresses/_02_generate_address/_expected_output.md";
 import RustCode from "../../libraries/rust/how_to/accounts_and_addresses/_02_generate_address/_code_sample.mdx";
 import RustOutput from "../../libraries/rust/how_to/accounts_and_addresses/_02_generate_address/_expected_output.md";
+import TipAccountApproaches from "../../_admonitions/_tip_account_approaches.md";
+
+After you have [created an account](01_create_a_wallet_account.mdx), you are ready to generate your first address.
+
+<TipAccountApproaches/>
 
 ## Code Example
+
+The following example will:
+
+1. Create an account manager.
+2. Get Alice's account which was [created in the first guide](01_create_a_wallet_account.mdx).
+3. Generate an address in Alice's account.
 
 <Tabs groupId="language">
     <TabItem value="rust" label="Rust">
