--- a/documentation/docs/how_tos/accounts_and_addresses/04_check_balance.mdx
+++ b/documentation/docs/how_tos/accounts_and_addresses/04_check_balance.mdx
@@ -1,10 +1,11 @@
 ---
 title: Check Balance
-description: ''
+description: "How to check a wallet account's balance."
 image: /img/logo/iota_mark_light.png
 keywords:
 - how to
-- java
+- get balance
+- check balance
 - nodejs
 - python
 - rust
@@ -17,9 +18,23 @@ import PythonCode from "../../libraries/python/how_to/accounts_and_addresses/_04
 import PythonOutput from "../../libraries/python/how_to/accounts_and_addresses/_04_check_balance/_expected_output.md";
 import RustCode from "../../libraries/rust/how_to/accounts_and_addresses/_04_check_balance/_code_sample.mdx";
 import RustOutput from "../../libraries/rust/how_to/accounts_and_addresses/_04_check_balance/_expected_output.md";
+import TipFaucet from "../../_admonitions/_tip_faucet.md";
+
+You can retrieve the balance for any [account you created](01_create_a_wallet_account.mdx) by calling the
+`Account.balance()` function.  Bear in mind that you should always sync the account with the node to get the latest
+transactions.
+
+<TipFaucet/>
 
 
 ## Code Example
+
+The following example will:
+
+1. Create an account manager.
+2. Get Alice's account which was [created in the first guide](01_create_a_wallet_account.mdx).
+3. Sync the account with the node to get the latest transactions.
+4. Request the account's balance.
 
 <Tabs groupId="language">
     <TabItem value="rust" label="Rust">
