--- a/documentation/docs/how_tos/run_how_tos.mdx
+++ b/documentation/docs/how_tos/run_how_tos.mdx
@@ -20,16 +20,39 @@ import NodejsGetCode from "../libraries/nodejs/how_to/_run_how_tos.mdx";
 import PythonGetCode from "../libraries/python/how_to/_run_how_tos.md";
 import RustGetCode from "../libraries/rust/how_to/_run_how_tos.md";
 
+## Hornet Node
+
+Most of the examples require a [Hornet Node](https://wiki.iota.org/hornet/develop/welcome) running the
+[Stardust](https://wiki.iota.org/introduction/develop/welcome) upgrade. You can connect to a node you trust, use the
+[public API](#public-api), [run your own node](#run-your-own-node) or [run a local private tangle](#run-a-local-private-tangle)
+
+### Public API
+
+You can use the [Shimmer Testnet](https://api.testnet.shimmer.network) as well as its
+[Faucet](https://faucet.testnet.shimmer.network/) to quickly run the examples.
+
+### Run Your Own Node
+
+If you want direct access to the Tangle, you can
+[set up a HORNET node using docker](https://wiki.iota.org/hornet/develop/how_tos/using_docker).
+
+### Run a Local Private Tangle
+
+If you want to run the examples locally,
+you can [set up a private tangle](https://wiki.iota.org/hornet/develop/how_tos/private_tangle) in a few simple steps.
+
+## Language Specific Instructions
+
 Each language has different set up instructions you need to follow to get the code examples up and running.
 
 <Tabs groupId="language">
     <TabItem value="rust" label="Rust">
-        <RustGetCode />
+        <RustGetCode/>
     </TabItem>
     <TabItem value="nodejs" label="Nodejs">
-        <NodejsGetCode />
+        <NodejsGetCode/>
     </TabItem>
     <TabItem value="python" label="Python">
-        <PythonGetCode />
+        <PythonGetCode/>
     </TabItem>
 </Tabs>
