--- a/documentation/docs/how_tos/native_tokens/03_melt_native_token.mdx
+++ b/documentation/docs/how_tos/native_tokens/03_melt_native_token.mdx
@@ -33,7 +33,7 @@ If you melt your native tokens, you can still destroy the foundry that created t
 The following example will:
 
 1. Create an account manager.
-2. Get Alice's account which was [created in the first guide](01_create_a_wallet_account.mdx).
+2. Get Alice's account which was [created in the first guide](../accounts_and_addresses/01_create_a_wallet_account.mdx).
 3. Get the account's balance.
 4. Melt 10 native tokens of the supplied ID.
 
