--- a/documentation/docs/getting_started/nodejs.mdx
+++ b/documentation/docs/getting_started/nodejs.mdx
@@ -1,79 +1,158 @@
 ---
-title: Getting Started With Node.js
-description: Getting started with the official IOTA Wallet Node.js library.
+description: Getting started with the official IOTA Wallet Library Software Node.js binding.
 image: /img/logo/wallet_light.png
 keywords:
-
 - Node.js
 - dotenv
 - install
 - npm
 - yarn
 - security
+- getting started
 ---
-import WarningPasswordStorage from '../_admonitions/_password_storage.md';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import CodeBlock from '@theme/CodeBlock';
+import create_account from '!!raw-loader!./../../../bindings/nodejs/examples/1-create-account.js';
 
-<WarningPasswordStorage/>
+# Getting Started with Node.js
 
-The [IOTA Wallet Node.js binding](https://www.npmjs.com/package/@iota/wallet) is published
-on [npmjs.com](https://www.npmjs.com/).
+The [IOTA Wallet Node.js binding](https://www.npmjs.com/package/@iota/wallet) is published on [npmjs.com](https://www.npmjs.com/).
+
+The [code examples](../how_tos/run_how_tos.mdx) use _dotenv_ for password management.
 
 ## Requirements
 
-* Make sure you have fulfilled the [Rust Getting Started](rust.mdx) requirements to compile the binding.
+You can use the following links to install any of the requirements.
 
-One of:
-* [npm](https://www.npmjs.com/)
-* [Yarn](https://yarnpkg.com/)
+| Requirement                                     | Version                                                                                                                                                                                  |
+|-------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| [Node.js](https://nodejs.org/en/)               | [14.x](https://nodejs.org/download/release/latest-v14.x/), [16.x](https://nodejs.org/download/release/latest-v16.x/), or [18.x - LTS](https://nodejs.org/download/release/latest-v18.x/) |
+| Your package manager of choice                  | [npm](https://www.npmjs.com/) or [Yarn](https://yarnpkg.com/)                                                                                                                            |
 
 ## Install the Library
 
-The package is published in [npmjs](https://www.npmjs.com/package/@iota/wallet). We also use _dotenv_ for password
-management in the examples.
+Since wallet.rs is also used to communicate with nodes in the
+[IOTA network](https://wiki.iota.org/learn/about-iota/an-introduction-to-iota/) the runs the
+[Chrysalis protocol](https://wiki.iota.org/introduction/welcome/) if you plan to use the library in the
+[Shimmer network](https://wiki.iota.org/shimmer/learn/welcome/) that runs the
+[Stardust protocol](https://wiki.iota.org/shimmer/introduction/welcome/), will need to install the latest `2.x.x`
+version. Since this is the latest version, you can simply install the package without adding any specifics.
 
-### npm
-
-To install with `npm`, you can run the following command:
-
-```bash
-npm install @iota/wallet dotenv
-```
-
-### yarn
-
-To install with `yarn`, you can run the following command:
+<Tabs>
+<TabItem value="npm" label="npm" default>
 
 ```bash
-yarn install @iota/wallet dotenv
+npm i @iota/wallet
 ```
+
+</TabItem>
+<TabItem value="yarn" label="Yarn">
+
+```bash
+yarn install @iota/wallet
+```
+
+</TabItem>
+</Tabs>
+
+## Build the Library
+
+If you prefer, you can build the library from source instead of [installing it](#install-the-library). **This process is
+more complex than simply installing the library.**
+
+### Clone the Repository
+
+The first thing you will need to build the library from source is:
+
+1. Clone the repository:
+
+```bash
+git clone git@github.com:iotaledger/wallet.rs.git
+```
+
+2. Move into the project's directory:
+
+```bash
+cd wallet.rs
+```
+
+3. Checkout the `develop` branch, or the latest `2.x.x` [tag](https://github.com/iotaledger/wallet.rs/tags). As `develop`
+is the default branch, you can skip this step.
+
+```bash
+git checkout develop
+```
+
+### Install the Library's Dependencies
+
+Once you have [cloned the repository](#clone-the-repository), you can proceed to install the library's dependencies:
+
+1. Move into the Node.js binding directory:
+
+```bash
+cd bindings/nodejs
+```
+
+2. Install the dependencies with your package manager of choice:
+
+
+<Tabs>
+<TabItem value="npm" label="npm" default>
+
+```bash
+npm i
+```
+
+</TabItem>
+<TabItem value="yarn" label="Yarn">
+
+```bash
+yarn
+```
+
+</TabItem>
+</Tabs>
+
+### Build the Library
+
+Once you have installed the library's dependencies, you can proceed to install the library. The [`build`](https://github.com/iotaledger/wallet.rs/blob/develop/bindings/nodejs/package.json#L11)
+script will install any necessary dependencies and then proceed to build the library and create the necessary packages.
+
+<Tabs>
+<TabItem value="npm" label="npm" default>
+
+```bash
+npm install
+```
+
+</TabItem>
+<TabItem value="yarn" label="Yarn">
+
+```bash
+yarn install
+```
+
+</TabItem>
+</Tabs>
 
 ## Use the Library
 
-After you have [installed the library](#install-the-library), you can create
-a [`AccountManager`](./../references/nodejs/classes/AccountManager.md)
-instance and interface with it.
+:::warning Safe password Storage
 
-```javascript
-const accountManagerOptions = {
-    storagePath: './alice-database',
-    clientOptions: {
-        nodes: ['https://api.testnet.shimmer.network'],
-        localPow: true,
-    },
-    coinType: CoinType.Shimmer,
-    secretManager: {
-        stronghold: {
-            snapshotPath: `./wallet.stronghold`,
-            password: `${process.env.SH_PASSWORD}`,
-        },
-    },
-};
+In a production setup, do not store passwords in the host's environment variables or in the source code. For reference, see our [backup and security recommendations](https://chrysalis.docs.iota.org/guides/backup_security) for production setups.
 
-const manager = new AccountManager(accountManagerOptions);
-```
+:::
 
-## What's Next?
+To use the library, you simply need to create an [`AccountManager`](../references/nodejs/classes/AccountManager) from
+the  `@iota/wallet` package in your application as shown in the example on line 8 of the example below.
 
-Now that you are up and running, you can get acquainted with the library using
-its [how-to guides](../how_tos/run_how_tos.mdx) and the
-repository's [code examples](https://github.com/iotaledger/wallet.rs/tree/develop/bindings/nodejs/examples).
+:::tip More Examples
+
+You can find more examples using the `wallet.rs` library's node.js binding in the [how-to section](../how_tos/run_how_tos.mdx).
+
+:::
+
+<CodeBlock className="language-javascript" metastring={"{8}"} showLineNumbers={true}>
+    {create_account}
+</CodeBlock>
