--- a/documentation/docs/how_tos/run_how_tos.mdx
+++ b/documentation/docs/how_tos/run_how_tos.mdx
@@ -20,6 +20,8 @@ import NodejsGetCode from "../libraries/nodejs/how_to/_run_how_tos.mdx";
 import PythonGetCode from "../libraries/python/how_to/_run_how_tos.md";
 import RustGetCode from "../libraries/rust/how_to/_run_how_tos.md";
 import JavaGetCode from "../libraries/java/how_to/_run_how_tos.md";
+import WarningPasswordStorage from '../_admonitions/_password_storage.md';
+
 
 # Run Code Examples
 
@@ -48,6 +50,8 @@ https://api.testnet.shimmer.network
 ## Language Specific Instructions
 
 Each language has different set up instructions you need to follow to get the code examples up and running.
+
+<WarningPasswordStorage/>
 
 <Tabs groupId="language">
     <TabItem value="rust" label="Rust">
