--- a/documentation/docs/libraries/java/how_to/_run_how_tos.mdx
+++ b/documentation/docs/libraries/java/how_to/_run_how_tos.mdx
@@ -1,3 +1,10 @@
+import ExampleEnv from '!!raw-loader!../../../../../.env.example';
+import CodeBlock from '@theme/CodeBlock';
+
+## Prerequisites
+
+Before you can run the examples, please refer to the [Java Getting Started guide](./../getting_started/java) to install
+the library
 
 ### Set Up Your .env file
 
@@ -5,14 +12,13 @@ The code examples use a `.env` file to store variables. You can download
 the [example file](https://github.com/iotaledger/wallet.rs/blob/develop/wallet/.env.example) or create a new one with
 the following variables:
 
-```dotenv
-NON_SECURE_USE_OF_DEVELOPMENT_MNEMONIC="endorse answer radar about source reunion marriage tag sausage weekend frost daring base attack because joke dream slender leisure group reason prepare broken river"
-STRONGHOLD_PASSWORD="some_hopefully_secure_password"
-NODE_URL="http://localhost:14265"
-FAUCET_URL="http://localhost:8091/api/enqueue"
-```
+<CodeBlock className={'language-dotenv'}>
+{ExampleEnv}
+</CodeBlock>
 
-You should update the `NODE_URL` and `FAUCET_URL` values to match the [Hornet node](#hornet-node) you want to use.
+The `.env.example` uses public [Shimmer Beta](https://wiki.iota.org/shimmer/introduction/reference/networks/betanet/)
+URLS. If you want to use another node, you should update the `NODE_URL` and `FAUCET_URL` values to match the
+[Hornet node](#hornet-node) you want to use.
 
 ## Run Code Examples
 
