--- a/documentation/docs/how_tos/run_how_tos.mdx
+++ b/documentation/docs/how_tos/run_how_tos.mdx
@@ -18,8 +18,8 @@ import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 import NodejsGetCode from "../libraries/nodejs/how_to/_run_how_tos.mdx";
 import PythonGetCode from "../libraries/python/how_to/_run_how_tos.md";
-import RustGetCode from "../libraries/rust/how_to/_run_how_tos.md";
-import JavaGetCode from "../libraries/java/how_to/_run_how_tos.md";
+import RustGetCode from "../libraries/rust/how_to/_run_how_tos.mdx";
+import JavaGetCode from "../libraries/java/how_to/_run_how_tos.mdx";
 import WarningPasswordStorage from '../_admonitions/_password_storage.md';
 
 
@@ -32,19 +32,29 @@ You can start anywhere, but since the guides may build on previous examples, if 
 you should probably start by [creating a wallet account](accounts_and_addresses/create_a_wallet_account) and then
 carry on to the next guide.
 
-## Hornet Node
+## Requirements
+
+### Hornet Node
 
 Most of the examples require a [Hornet Node](https://wiki.iota.org/shimmer/hornet/welcome) running the
 [Stardust](https://wiki.iota.org/shimmer/introduction/welcome) upgrade. You can connect to a node you trust, use the
 [Shimmer Testnet](#shimmer-testnet), [run your own node](https://wiki.iota.org/shimmer/hornet/how_tos/using_docker) or
 [run a local private tangle](https://wiki.iota.org/shimmer/hornet/how_tos/private_tangle).
 
-### Shimmer Testnet
+#### Shimmer Testnet
 
 You can use the following public, load-balanced endpoint to run code examples:
 
+#### Node URL
+
 ```plaintext
 https://api.testnet.shimmer.network
+```
+
+#### Faucet URL
+
+```plaintext
+https://faucet.testnet.shimmer.network/api/enqueue
 ```
 
 ## Language Specific Instructions
